--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-	"name": "testingserver",
-	"version": "1.0.0",
-	"description": "Server Testing Project",
-	"main": "server.js",
-	"scripts": {
-		"test": "jest --watch --verbose"
-	},
-	"jest": {
-		"testEnvironment": "node"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/LambdaSchool/Server-Testing.git"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/LambdaSchool/Server-Testing/issues"
-	},
-	"homepage": "https://github.com/LambdaSchool/Server-Testing#readme",
-	"devDependencies": {
-		"jest": "^23.6.0",
-		"supertest": "^3.3.0"
-	},
-	"dependencies": {
-		"express": "^4.16.4"
-	}
+  "name": "testingserver",
+  "version": "1.0.0",
+  "description": "Server Testing Project",
+  "main": "server.js",
+  "scripts": {
+    "test": "jest --watch --verbose",
+    "server": "index.js",
+    "start": "nodemon"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LambdaSchool/Server-Testing.git"
+  },
+  "keywords": [],
+  "author": "Jarrad Miller <jm020801@gmail.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LambdaSchool/Server-Testing/issues"
+  },
+  "homepage": "https://github.com/LambdaSchool/Server-Testing#readme",
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "supertest": "^3.4.2"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "knex": "^0.16.3",
+    "nodemon": "^1.18.9",
+    "server": "^1.0.18",
+    "sqlite3": "^4.0.6"
+  }
 }
